# cpp

./: .gitignore  CMakeLists.txt
CrazyPanda/: CMakeLists.txt  CMakeLists_include_json_not_used_git.txt  buff.cpp  buff.h  item.cpp  item.h  main.cpp
MySQL/MySQL_test1/: main.cpp
MySQL/QtSql_CLion/: CMakeLists_homeBook_git.txt  main.cpp
MySQL/qt_mysq_test_qt/: main.cpp
MySQL/qt_mysql/: main.cpp
MySQL/sqlite/: sqlite_git.txt
PostgreSQL/Test_DB/: CMakeLists_Work_git.txt  main.cpp
PostgreSQL/Test_DB_Qt_SQL/: CMakeLists.txt  CMakeLists_Home_git.txt  main.cpp
PostgreSQL/Test_DB_query/: CMakeLists_Work_git.txt  main.cpp
PostgreSQL/postgresql_Backup/: copy_test_db_git.backup  copy_test_db_git.sql
Qt/AuthorizationWindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc
Qt/Calculator/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/Menu/: mainwindow.cpp  mainwindow.ui  resource.qrc
Qt/NewWindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui  secondwindow.ui
Qt/OpeningDialogWindows/: secondwindow.ui
Qt/Project1/: main.cpp  mainwindow.cpp  mainwindow.ui  secondwindow.h
Qt/build-AuthorizationWindow-Desktop_Qt_6_0_1_MinGW_64_bit-Debug/: Makefile.Debug  Makefile.Release  ui_mainwindow.h
Qt/build-Calculator-Desktop_Qt_6_0_1_MinGW_64_bit-Debug/: Makefile.Debug  Makefile.Release  ui_mainwindow.h
Qt/build-Calculator-Desktop_Qt_6_2_1_MinGW_64_bit-Debug/: Makefile.Debug  Makefile.Release  ui_mainwindow.h
Qt/build-Menu-Desktop_Qt_6_0_1_MinGW_64_bit-Debug/: Makefile.Debug  Makefile.Release  ui_mainwindow.h
Qt/build-NewWindow-Desktop_Qt_6_0_1_MinGW_64_bit-Debug/: Makefile.Debug  Makefile.Release  ui_mainwindow.h  ui_secondwindow.h
Qt/build-OpeningDialogWindows-Desktop_Qt_6_0_1_MinGW_64_bit-Debug/: Makefile.Debug  Makefile.Release  ui_secondwindow.h
Qt/build-Project1-Desktop_Qt_6_0_1_MinGW_64_bit-Debug/: Makefile.Debug  Makefile.Release  ui_mainwindow.h
Qt/build-del2-Desktop_Qt_6_2_0_MinGW_64_bit-Debug/: Makefile.Debug  Makefile.Release
SQL/: SQL.txt  skillbox.sql
Skillbox/intensive_lesson/: main.cpp
Skillbox/lessons_1-13/: repl_it.txt
Skillbox/module_30_HTTP_requests/30_1_User_requests/: CMakeLists.txt  main.cpp
Skillbox/module_30_HTTP_requests/30_3_Queries_with_arguments/: CMakeLists.txt  main.cpp
Skillbox/module_32_JSON/32_1_Information_about_film/: CMakeLists.txt  main.cpp
Skillbox/module_32_JSON/32_2_Film_Data_Analysis/: CMakeLists.txt  main.cpp
YandexAlgorithmTtraining/1Complexity_testing_special_cases/: main.cpp
YandexAlgorithmTtraining/1_Complexity_testing_special_cases/: CMakeLists_Home_git.txt  CMakeLists_Work_git.txt  main.cpp  task_git.docx
YandexAlgorithmTtraining/2_Linear search/: CMakeLists_Home_git.txt  main.cpp  task_git.docx
guide/: 23_Macros.txt  24_Time.txt  25_Project_structure.txt  26_OOP1.txt  27_OOP2_Constructor_This_Inheritance.txt  28_Thread.txt  29_Paradigms_OOP.txt  30_HTTP_requests.txt  31_Smart_Pointer.txt  32_JSON.txt
guide/SQL/: skillbox.mwb  skillboxDB.sql
guide/cmake-master/: CMake.txt
intensive_lesson/nbproject/: Makefile-Release.mk  Package-Debug.bash  configurations.xml
lessons/: lessons.txt
test/: SFML_git.txt  windeployqt_git.txt
test/AVR/: AVR_git.txt
test/base64/: main.cpp
test/module_16_test/: main.cpp
test/module_17_XO/: CMakeLists.txt  main.cpp
test/module_17_test/: main.cpp
test/module_18_test/: CMakeLists.txt
test/module_19_test/: CMakeLists.txt  main.cpp
test/module_21_test/: CMakeLists.txt  main.cpp
test/module_23_test/: main.cpp
test/module_24_test/: main.cpp
test/module_26_test/: main.cpp
test/module_27_2_test/: main.cpp
test/module_27_3_test/: main.cpp
test/module_27_test/: main.cpp
test/module_30_test/: CMakeLists.txt  main.cpp
test/module_32_test_1/: CMakeLists.txt  main.cpp
(+373 files in other folders)
